# ish-multiarch

./: .gitignore  README.md  README_JP.md  README_KO.md  README_ZH.md  meson.build  meson_options.txt  misc.h  xX_main_Xx.h
.github/workflows/: ci.yml
app/: AboutAppearanceViewController.m  AppDelegate.h  AppDelegate.m  PasteboardDevice.m  Roots.h  Roots.m  SceneDelegate.m  Terminal.m  TerminalView.m  TerminalViewController.m  UpgradeRootViewController.m  WatchApp.xcconfig  WatchCore.xcconfig  WatchLinkSmoke.xcconfig  WatchOS.xcconfig  WatchUITests.xcconfig  iOSFS.m  xcode-meson.sh  xcode-ninja.sh
app/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/Watch/: ContentView.swift  TerminalDecoder.swift  WatchRuntime.swift  iSHWatch-Bridging-Header.h  iSHWatchApp.swift
app/WatchUITests/: iSHWatchUITests.swift
asbestos/: asbestos.c  asbestos.h  cell-test.c  frame.h  gadgets-generic.h  gen.c  gen.h  offsets.c
asbestos/gadgets-aarch64/: bits.S  control.S  entry.S  gadgets.h  memory.S
docs/multiarch/: README.md
emu/: cpu.h  float80-test.c  float80.c  float80.h  fpu.c  tlb-test.c  tlb.c  tlb.h
fs/: adhoc.c  dir-task-test.c  dir.c  fake.c  fd-task-test.c  fd.c  fd.h  generic.c  inode-test.c  inode.c  inode.h  lock-test.c  lock.c  path-task-test.c  path.c  path.h  pipe.c  pipe.h  poll-oneshot-test.c  poll.c  poll.h  proc-pid-test.c  proc.c  pty-handoff-lifecycle-test.c  pty-lifecycle-test.c  pty-read-lifecycle-test.c  pty.c  real-provider-test.c  real-pwrite-test.c  real.c  real.h  sock.c  sock.h  socket-lifecycle-test.c  socket-listen-rearm-failure-test.c  socket-listen-restart-test.c  socket-listener-shutdown-test.c  socket-scm-accounting-test.c  socket-scm-concurrency-test.c  socket-scm-gc-race-test.c  (+18 more)
fs/proc/: entry.c  pid.c  root.c
guest/: selection.h  target-types-test.c  target-types.h
guest/aarch64/: add-sub-carry-test.c  add-sub-extended-test.c  advsimd-add-test.c  advsimd-compare-test.c  advsimd-copy-test.c  advsimd-immediate-test.c  advsimd-logical-test.c  advsimd-narrow-test.c  advsimd-pairwise-long-test.c  advsimd-pairwise-test.c  advsimd-permute-test.c  advsimd-shift-long-test.c  advsimd-table-test.c  advsimd-variable-shift-test.c  backend-benchmark.c  backend-test.c  backend.c  backend.h  barrier-test.c  casp-test.c  condition-test.c  condition.c  condition.h  conditional-compare-test.c  core-link-smoke.c  cpu-test.c  cpu.h  data-processing-1source-test.c  data-processing-2source-test.c  decode.c  decode.h  e0-test.c  elf64-loader-test.c  elf64-loader.c  elf64-loader.h  elf64-test.c  elf64.c  elf64.h  exclusive-test.c  execute.c  (+66 more)
guest/i386/: cpu-test.c  cpu.h
guest/linux/: auxv.h  errno.h  file-mapping-service.h  futex-abi.h  futex-waitv-abi-test.c  membarrier.h  memory-file-test.c  memory-shared-test.c  memory-test.c  memory.c  memory.h  mman.h  mremap-file-test.c  mremap-test.c  signal-service-backend-test.c  signal-service-bridge-test.c  signal-service-test.h  signal-service.h  syscall-service-backend-test.c  syscall-service-bridge-test.c  syscall-service.h  syscall.h  user-memory-test.c  user-memory.c  user-memory.h  vma-test.c  vma.c  vma.h
guest/memory/: address-space-test.c  address-space.c  address-space.h  file-pager-test.c  file-pager.c  file-pager.h  page-backing-test.c  page-backing.c  page-backing.h  page-table-cow-thread-test.c  page-table-remap-test.c  page-table-test.c  page-table.c  page-table.h  tlb-shared-test.c  tlb-test.c  tlb.c  tlb.h
iSH.xcodeproj/: project.pbxproj
iSH.xcodeproj/xcshareddata/xcschemes/: iSHCore-watchOS.xcscheme  iSHWatch.xcscheme  iSHWatchLinkSmoke.xcscheme
kernel/: aarch64-clock-gettime-syscall-test.c  aarch64-clone-test.c  aarch64-clone3-syscall-test.c  aarch64-cross-abi-exec-lifecycle-test.c  aarch64-exec-image-test.c  aarch64-exec-image.c  aarch64-exec-image.h  aarch64-exec-transaction-test.c  aarch64-exec.c  aarch64-exec.h  aarch64-fd-service.c  aarch64-fd-service.h  aarch64-fd-syscall-test.c  aarch64-file-mapping-service-test.c  aarch64-file-mapping-service.c  aarch64-file-mapping-service.h  aarch64-file-syscall-test.c  aarch64-futex-lifecycle-test.c  aarch64-futex-test.c  aarch64-futex-waitv-test.c  aarch64-getrandom-syscall-test.c  aarch64-io-lifecycle-test.c  aarch64-lseek-syscall-test.c  aarch64-nanosleep-syscall-test.c  aarch64-process-syscall-test.c  aarch64-resource-wire.c  aarch64-resource-wire.h  aarch64-robust-futex-test.c  aarch64-sigaltstack-test.c  aarch64-signal-service-test.c  aarch64-signal-service.c  aarch64-signal-service.h  aarch64-sigsuspend-syscall-test.c  aarch64-socket-ipv6-test.c  aarch64-socket-listen-test.c  aarch64-socket-message-test.c  aarch64-socket-ping-test.c  aarch64-socket-query-test.c  aarch64-socket-syscall-test.c  aarch64-syscall-service-test.c  (+74 more)
platform/: apple-resolver-test.c  apple-resolver.c  apple-resolver.h  apple-rootfs-seed-test.c  apple-rootfs-seed.c  apple-rootfs-seed.h  apple-runtime-link-smoke.c  apple-watch-runtime-link-smoke.c  apple-watch-runtime-test.c  apple-watch-runtime.c  apple-watch-runtime.h  darwin-link-smoke.c  darwin.c
tests/aarch64/: alpine-smoke.bash  dns-port-redirect-probe.c  dns-port-redirect-test.bash  dns-port-redirect.c  local-network-fixture.py
tests/apple/: watch-terminal-decoder-test.swift
tests/e2e/futex_shared/: expected.txt  test.c  test.sh
tests/e2e/robust_lifecycle/: expected.txt  test.c  test.sh
tests/e2e/thread_exec_i386/: expected.txt  test.c  test.sh
tools/: apple-aarch64-backend-probe.c  apple-aarch64-hardlinks.awk  apple-aarch64-rootfs-inputs.xcfilelist  apple-aarch64-rootfs-test.sh  apple-aarch64-rootfs.sh  apple-abi-probe.c  apple-core-gate.sh  apple-meson-arch-test.sh  apple-meson-arch.sh  apple-watch-package.sh  apple-watch-rootfs-phase.sh  apple-watch-terminal-decoder-test.sh  meson.build  ptraceomatic.c  unicornomatic.c
util/: sync.c  sync.h  timer-lifecycle-test.c  timer.c  timer.h
